--- a/easier/index.html
+++ b/easier/index.html
@@ -3,11 +3,19 @@
 <head>
   <meta charset="utf-8">
   <title>Module 4 Solution Starter</title>
+
+  <script>
+  	var names = [];
+  </script>
+
   <script src="SpeakHello.js"></script>
   <script src="SpeakGoodBye.js"></script>
   <script src="script.js"></script>
+
 </head>
 <body>
-  <h1>Module 4 Solution Starter</h1>
+
+  <h1>My Solution for Module 4!</h1>
+
 </body>
 </html>
